<resources>
    <string name="app_name">Bonus</string>
    <string name="your_profile_picture_url">Your Profile Picture Url</string>
    <string name="age">Age</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="e_mail">E-mail</string>
    <string name="lastname">LastName</string>
    <string name="name">Name</string>
    <string name="your_profile_picture">Your Profile Picture</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">Email</string>
    <string name="your_name">YOUR NAME</string>
</resources>
